--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,8 +1,10 @@
 server {
+    echo "111?";
     listen       80;
     server_name  blryli.github.io;
 
     location / {
+        echo "222";
         try_files $uri $uri/ /index.html;
     }
 
